# parallelobox

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Session.vim  build.sh  consolidate.sh  parallelobox.py  run.sh  testrun.sh  testrundbg.sh  testsnail.sh  testsnaildbg.sh
printers/: default.ini  sample.ini
scripts/: cleanout.sh  createdebugbuild.sh  createreleasebuild.sh  createverbosereleasebuild.sh  prototype-dbg.sh  prototype-verbose.sh  prototype.sh  testbld.sh  testrun.sh  testrundbg.sh  testsnail.sh  testsnaildbg.sh  testsnaildbghard.sh  testsnailpoly.sh
src/: align.cpp  align.h  args.cpp  args.h  blockmerge.cpp  blockmerge.h  cgals.h  clustering.cpp  clustering.h  config.cpp  config.h  defaults.h  fillempty.cpp  fillempty.h  grid_cut.cpp  grid_cut.h  main.cpp  meshbox.cpp  meshbox.h  multivec.h  objective.cpp  objective.h  random.cpp  random.h  regiongrowth.cpp  regiongrowth.h  regiongrowth_old.cpp  reporting.h  resolve.cpp  resolve.h  resolve_alt2.cpp  resolve_alt2.h  resolve_old.cpp  symmetry.cpp  symmetry.h  vec.cpp  vec.h
